--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "james-yu.latex-workshop",
+        "spencerwmiles.vscode-task-buttons",
         //  "tecosaur.latex-utilities"
         // "streetsidesoftware.code-spell-checker-dutch",
     ]
