--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,4 +6,35 @@
     ],
     "latex-workshop.latex.autoBuild.run": "onSave",
     "explorer.excludeGitIgnore": true,
+    "VsCodeTaskButtons.showCounter": false,
+    "VsCodeTaskButtons.tasks": [
+        {
+            "label": "PDF",
+            "alignment": "left",
+            "task": "PDF",
+            "description": "Create a PDF of the current file.",
+            "tooltip": "Create a PDF of the current file."
+        },
+        {
+            "label": "HTML",
+            "alignment": "left",
+            "task": "HTML",
+            "description": "Create HTML of the current file.",
+            "tooltip": "Create HTML of the current file."
+        },
+        {
+            "label": "Bake",
+            "alignment": "left",
+            "task": "Bake",
+            "description": "Bake this project.",
+            "tooltip": "Bake this project."
+        },
+        {
+            "label": "Serve",
+            "alignment": "left",
+            "task": "Serve",
+            "description": "Serve this project.",
+            "tooltip": "Serve this project."
+        },
+    ]
 }
