--- a/.ximera/ximera.cfg
+++ b/.ximera/ximera.cfg
@@ -32,17 +32,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\Preamble{xhtml}
+\Preamble{xhtml,mathjax}
 
 \NoFonts
 
-\Configure{VERSION}{}
+%\Configure{VERSION}{}
 
-\Configure{DOCTYPE}{\HCode{<!doctype html>\Hnewline}}
+%\Configure{DOCTYPE}{\HCode{<!doctype html>\Hnewline}}
 
-\Configure{HTML}{\HCode{<html lang="en">\Hnewline}}{\HCode{\Hnewline</html>}}
+%\Configure{HTML}{\HCode{<html lang="en">\Hnewline}}{\HCode{\Hnewline</html>}}
 
-\Configure{@HEAD}{\HCode{<meta name="generator" content="TeX4ht (http://www.cse.ohio-state.edu/\string~gurari/TeX4ht/)" />\Hnewline}}
+%\Configure{@HEAD}{\HCode{<meta name="generator" content="TeX4ht (http://www.cse.ohio-state.edu/\string~gurari/TeX4ht/)" />\Hnewline}}
 \Configure{@HEAD}{\HCode{<meta name="ximera" content="version 0.0.1" />\Hnewline}}
 \Configure{@HEAD}{\HCode{<link href="https://ximera.osu.edu/public/stylesheets/standalone.css" rel="stylesheet" media="screen"/>\Hnewline}}
 \Configure{@HEAD}{\HCode{<script type="text/javascript" async src="https://ximera.osu.edu/public/javascripts/standalone.min.js"></script>\Hnewline}}
@@ -60,47 +60,103 @@
 \Configure{BODY}{%
 \HCode{<body>\Hnewline}%
 \Tg<div class="preamble">%
+\IfFileExists{\jobname.jax}{
 \Tg<script type="math/tex">%
 \BVerbatimInput{\jobname.jax}%
 \Tg</script>%
+}{}
 \IfFileExists{\jobname.ids}{\HCode{<script type="text/javascript">\Hnewline}%
 \BVerbatimInput{\jobname.ids}%
 \HCode{</script>\Hnewline}%
-\Tg</div>%
 }{}
+\Tg</div>%
 }{%
-\HCode{</body>\Hnewline}%
+\ifvmode\IgnorePar\fi\EndP\HCode{</body>\Hnewline}%
 }
-\newtoks\eqtoks
-\def\AltMath#1${\eqtoks{#1}%
-        \HCode{<script type="math/tex">\the\eqtoks</script>}$}
-\Configure{$}{}{}{\expandafter\AltMath}
 
-\def\AltlMathI#1\){\eqtoks{#1}%
-        \HCode{<script type="math/tex">\the\eqtoks</script>}\)}
-\Configure{()}{\AltlMathI}{}
+% contents of abstract is saved to a macro, but there are still tags for abstract, 
+% so we need to remove it
+\ConfigureEnv{abstract}{}{}{}{}
 
-\def\AltlDisplay#1\]{\eqtoks{#1}%
-        \HCode{<script type="math/tex; mode=display">\the\eqtoks</script>}\]}
-\Configure{[]}{\AltlDisplay}{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% These configurations were based on old TeX4ht MathJax support code
+% Below is a code that works with the current version
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+% \newtoks\eqtoks
+% \long\def\AltMath#1${\eqtoks{#1}%
+%         \HCode{<script type="math/tex">\the\eqtoks</script>}$}
+% \Configure{$}{}{}{\expandafter\AltMath}
+% 
+% \long\def\AltlMathI#1\){\eqtoks{#1}%
+%         \HCode{<script type="math/tex">\the\eqtoks</script>}\)}
+% \Configure{()}{\AltlMathI}{}
+% 
+% \long\def\AltlDisplay#1\]{\eqtoks{#1}%
+%         \HCode{<script type="math/tex; mode=display">\the\eqtoks</script>}\]}
+% \Configure{[]}{\AltlDisplay}{}
+% 
+% \long\def\AltlDisplayI#1$${\eqtoks{#1}%
+%        \HCode{<script type="math/tex; mode=display">\the\eqtoks</script>}$$}
+% \Configure{$$}{}{}{\expandafter\AltlDisplayI}
 
-\def\AltlDisplayI#1$${\eqtoks{#1}%
-       \HCode{<script type="math/tex; mode=display">\the\eqtoks</script>}$$}
-\Configure{$$}{}{}{\expandafter\AltlDisplayI}
-\newcommand\VerbMath[1]{%
-\renewenvironment{#1}{\NoFonts}{\EndNoFonts}
-\ScriptEnv{#1}{\ifvmode \IgnorePar\fi \EndP\HCode{<script type="math/tex; mode=display"> \string\begin{#1}\Hnewline}\HtmlParOff}{\HtmlParOn\HCode{\string\end{#1}</script>}}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% The following code is used to produce <script type="text/math">, but I am not sure if it is any better than the default MathJax 
+% support in TeX4ht. The rendering of Math seems to be much worse. It looks like an issue in Ximera's JavaScript code.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\catcode`\:=11
+\Configure{[]}{\HCode{<script type="math/tex">}\:HandleMathjaxCatcodes\catcode`\&=11\AltlDisplay}{\:RestoreMathjaxCatcodes\HCode{</script>}}
+\Configure{$}{\HCode{<script type="math/tex">}\:HandleMathjaxCatcodes}{\:RestoreMathjaxCatcodes\HCode{</script>}}{\expandafter\AltMathOne}
+\Configure{$$}{\HCode{<script type="math/tex">}\:HandleMathjaxCatcodes}{\:RestoreMathjaxCatcodes\HCode{</script>}}{\expandafter\AltlDisplayDollars}
+\Configure{()}{\HCode{<script type="math/tex">}\:HandleMathjaxCatcodes\catcode`\&=11\AltlMath}{\:RestoreMathjaxCatcodes\HCode{</script>}}
+\long\def\AltlMath#1\){\expandafter\alteqtoks{#1}\)}
+\long\def\AltlDisplay#1\]{\alteqtoks{#1}\]}
+\long\def\AltMathOne#1${\alteqtoks{#1}$}
+\long\def\AltlDisplayDollars#1$${\alteqtoks{#1}$$}
+\catcode`\:=12
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Handle VerbMath
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \newcommand\VerbMath[1]{%
+% \renewenvironment{#1}{\NoFonts}{\EndNoFonts}
+% \ScriptEnv{#1}{\ifvmode \IgnorePar\fi \EndP\HCode{<script type="math/tex; mode=display"> \string\begin{#1}\Hnewline}\HtmlParOff}{\HtmlParOn\HCode{\string\end{#1}</script>}}
+% }
+
+% Better version, based on TeX4ht sources, with <script type="text/math> tags
+\ExplSyntaxOn
+\renewcommand\VerbMath[2][]{%
+  \cs_if_exist:cTF{#2}{
+    \:savemathjaxenv{#2}%
+    \RenewDocumentEnvironment{#2}{+!b}{%
+      % we must use ~ instead of spaces in \ExplSyntaxOn
+      \ifvmode \IgnorePar\fi \EndP\HCode{<script~type="math/tex;~mode=display">}
+      \NoFonts\expandafter\VerbMathToks\expandafter{\detokenize{##1}}{#2}\EndNoFonts%
+      \HCode{</script>}
+      \ifx\relax#1\relax\else%
+      \refstepcounter{#1}%
+      \regex_extract_once:nVNTF { label\s* \x{7B}([^\x{7D}]*)\x{7D}} {\l_tmpb_tl} \l_tmp_seq {\label{\seq_item:Nn\l_tmp_seq{2}}} {}%
+      \fi
+    }{}
+  }{}%
 }
+\ExplSyntaxOff
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \ScriptEnv{matlabEquation}{\ifvmode \IgnorePar\fi \EndP\HCode{<script type="math/tex; mode=display"> \string\begin{equation}\Hnewline}\HtmlParOff}{\HtmlParOn\HCode{\string\end{equation}</script>}}
 
-\VerbMath{equation}
-\VerbMath{equation*}
-\VerbMath{align}
-\VerbMath{align*}
-\VerbMath{alignat}
-\VerbMath{alignat*}
-\VerbMath{eqnarray}
-\VerbMath{eqnarray*}
+%  This is not necessary, we can reuse all \VerbMath environments from TeX4ht 
+% \VerbMath{equation}
+% \VerbMath{equation*}
+% \VerbMath{align}
+% \VerbMath{align*}
+% \VerbMath{alignat}
+% \VerbMath{alignat*}
+% \VerbMath{eqnarray}
+% \VerbMath{eqnarray*}
+
 
 \renewcommand{\paragraph}[1]{%
   \HCode{<span class="paragraphHead">}%
@@ -111,14 +167,13 @@
   #1%
   \HCode{</span>}\par\IgnorePar}
 
-\let\abstract\relax
-\let\endabstract\relax
-\DeclareGraphicsExtensions{.jpg,.png,.gif,.svg}
-\Configure{graphics*}
-{svg}{
-  {\Configure{Needs}{File: \Gin@base.svg}\Needs{}}
-  \Picture[]{\csname Gin@base\endcsname.svg \csname a:Gin-dim\endcsname}%
-}
+% is this really necessary? SVG is now supported by TeX4ht
+% \DeclareGraphicsExtensions{.jpg,.png,.gif,.svg}
+% \Configure{graphics*}
+% {svg}{
+%   {\Configure{Needs}{File: \Gin@base.svg}\Needs{}}
+%   \Picture[]{\csname Gin@base\endcsname.svg \csname a:Gin-dim\endcsname}%
+% }
 \ifcsname ifstandalone\endcsname
   \ifstandalone
     \renewcommand\includegraphics[2][]{}
@@ -147,8 +202,8 @@
 \makeatother
 \renewenvironment{javascriptCode}{\NoFonts}{\EndNoFonts}
 \ScriptEnv{javascriptCode}{\stepcounter{identification}\ifvmode \IgnorePar\fi \EndP\HCode{<div class="javascript-code" id="javascript\arabic{identification}"><script type="text/text">}\HtmlParOff}{\HtmlParOn\HCode{\Hnewline</script></div>}}
-\ConfigureEnv{verbatim}{\HCode{<pre>}}{\HCode{</pre>}}{}{}
-\ConfigureEnv{lstlisting}{\HCode{<pre>}}{\HCode{</pre>}}{}{}
+\ConfigureEnv{verbatim}{\ifvmode\IgnorePar\fi\EndP\HCode{<pre>}}{\ifvmode\IgnorePar\fi\EndP\HCode{</pre>}}{}{}
+\ConfigureEnv{lstlisting}{\ifvmode\IgnorePar\fi\EndP\\HCode{<pre>}}{\ifvmode\IgnorePar\fi\EndP\HCode{</pre>}}{}{}
 \Configure{textbf}{\ifvmode\ShowPar\fi\HCode{<strong>}}{\HCode{</strong>}}
 \Configure{textit}{\ifvmode\ShowPar\fi\HCode{<em>}}{\HCode{</em>}}
 \Configure{emph}{\ifvmode\ShowPar\fi\HCode{<em>}}{\HCode{</em>}}
