--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     ],
     "latex-workshop.latex.autoBuild.run": "onSave",
     "explorer.excludeGitIgnore": true,
+    // "task.problemMatchers.neverPrompt": true    ,
     "VsCodeTaskButtons.showCounter": false,
     "VsCodeTaskButtons.tasks": [
         {
@@ -37,44 +38,41 @@
             "tooltip": "Serve this project."
         },
         {
-            "label": "Extra",
+            "label": "xExtra",
             "alignment": "right",
             "tasks": [
                 {
-                "label": "XimeraServer",
-                "alignment": "right",
-                "task": "XimerServer",
-                "description": "Start local server.",
-                "tooltip": "Start local server."
+                    "task": "Start Ximera Server",
+                    "label": "Start Ximera Server",
+                    "description": "Start local Ximera webserver.",
+                    "problemMatcher": [],
                 },
                 {
-                    "task": "bakehandout",
-                    "label": "Bake handout",
-                    "alignment": "right",
-                    "description": "Make handout PDF's.",
-                    "tooltip": "Make handout PDF's.",
-                },
-                {
-                    "task": "bakestandaard",
-                    "label": "Bake full version",
+                    "task": "Bake standard",
+                    "label": "Bake  standard PDFs (with answers)",
                     "description": "Make  full PDF's. ('standaard')",
-                    "tooltip": "Make  full PDF's. ('standaard')",
-                    "alignment": "right",
+                    "problemMatcher": [],
                 },
                 {
-                "label": "Remove standaard PDF's",
-                "task": "cleanstandaard",
+                    "task": "Bake handout",
+                    "label": "Bake handout PDF's (without answers)",
+                    "description": "Make handout PDF's.",
+                    "problemMatcher": [],
+                },                
+                {
+                    "task": "Delete standard",
+                    "label": "Delete all standard PDFs",
+                    "problemMatcher": [],
                 },
                 {
-                "label": "Remove handout PDF's",
-                "task": "cleanhandout",
+                    "task": "Delete handout",
+                    "label": "Delete all handout PDFs",
+                    "problemMatcher": [],
                 },
                 {
-                "label": "Clean all",
-                "alignment": "right",
-                "task": "clean",
-                "description": "Delete all generated files.",
-                "tooltip": "Delete all generated files.",
+                    "task": "Delete all",
+                    "label": "Delete all HTML and PDFs",
+                    "problemMatcher": [],
                 },
             ],
         },
