--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,7 +43,7 @@
             "tooltip": "Serve this project."
         },
         {
-            "label": "xExtra",
+            "label": "Extra",
             "alignment": "right",
             "tasks": [
                 {
