tasks: use localhost:2000/repositories as default

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -140,7 +140,7 @@
           "id": "openSimpleBrowser",
           "type": "command",
           "command": "simpleBrowser.show",
-          "args": [ "http://localhost:2000/test" ],
+          "args": [ "http://localhost:2000/repositories" ],
 
         }
     ]    
