--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,137 +2,81 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "2.0.0",
+    "type": "shell",
+    "command": "xmlatex",
+    "windows": {
+        "command": ".\\scripts\\xmlatex.bat"
+    },    
+    "problemMatcher": [],
     "tasks": [
         {
-            "type": "shell",
             "label": "PDF",
-            "command": "./scripts/xmlatex",
-            "windows": {
-                "command": ".\\scripts\\xmlatex.bat"
-            },
             "args": [
                 "compilePdf",
                 "${relativeFile}"
             ],
-            "problemMatcher": []
         },
         {
-            "type": "shell",
             "label": "HTML",
-            "command": "./scripts/xmlatex",
-            "windows": {
-                "command": ".\\scripts\\xmlatex.bat"
-            },
             "args": [
                 "--",
                 "--skip-mathjax",
                 "compile",
                 "${relativeFile}"
             ],
-            "problemMatcher": []
         },
         {
-            "type": "shell",
             "label": "Bake",
-            "command": "./scripts/xmlatex",
-            "windows": {
-                "command": ".\\scripts\\xmlatex.bat"
-            },
             "args": [
                 "--",
                 "--skip-mathjax",
                 "bake"
             ],
-            "problemMatcher": []
-        },
         {
-            "type": "shell",
             "label": "Serve",
-            "command": "./scripts/xmlatex",
-            "windows": {
-                "command": ".\\scripts\\xmlatex.bat"
-            },
             "args": [
                 "serve"
             ],
-            "problemMatcher": []
         },        
         {
-            "type": "shell",
             "label": "Start Ximera Server",
-            "command": "./scripts/xmlatex",
-            "windows": {
-                "command": ".\\scripts\\xmlatex.bat"
-            },
             "args": [
                 "ximeraserver"
             ],
-            "problemMatcher": []
         },
         {
                 "label": "Preview in Simple Browser",
                 "command": "${input:openSimpleBrowser}",
         },
         {
-            "type": "shell",
             "label": "Bake standard",
-            "command": "./scripts/xmlatex",
-            "windows": {
-                "command": ".\\scripts\\xmlatex.bat"
-            },
             "args": [
                 "bakestandaard"
             ],
-            "problemMatcher": []
         },
         {
-            "type": "shell",
             "label": "Bake handout",
-            "command": "./scripts/xmlatex",
-            "windows": {
-                "command": ".\\scripts\\xmlatex.bat"
-            },
             "args": [
                 "bakehandout"
             ],
-            "problemMatcher": []
         },
         {
-            "type": "shell",
             "label": "Delete standard",
-            "command": "./scripts/xmlatex",
-            "windows": {
-                "command": ".\\scripts\\xmlatex.bat"
-            },
             "args": [
                 "cleanstandaard"
             ],
-            "problemMatcher": []
         },
         {
-            "type": "shell",
             "label": "Delete handout",
-            "command": "./scripts/xmlatex",
-            "windows": {
-                "command": ".\\scripts\\xmlatex.bat"
-            },
             "args": [
                 "cleanhandout"
             ],
-            "problemMatcher": []
         },
         {
-            "type": "shell",
-            // "task": "clean",
             "label": "Delete all",
-            "command": "./scripts/xmlatex",
-            "windows": {
-                "command": ".\\scripts\\xmlatex.bat"
-            },
             "args": [
                 "clean"
             ],
-            "problemMatcher": []
         },
     ],
     "inputs": [
@@ -140,8 +84,13 @@
           "id": "openSimpleBrowser",
           "type": "command",
           "command": "simpleBrowser.show",
-          "args": [ "http://localhost:2000/repositories" ],
+          "args": [ "http://localhost:2000/test" ],
 
         }
-    ]    
+    ],
+    "options": {
+        "env": {
+          "PATH": "/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:./scripts"  
+        }
+      },    
 }
