update tasks, implement 'xmlatex all'  (via xmlatex.test for now)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,7 +32,13 @@
                 "--skip-mathjax",
                 "bake"
             ],
-        }
+        },
+        {
+            "label": "All",
+            "args": [
+                "all"
+            ],
+        },
         {
             "label": "Serve",
             "args": [
