--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,20 +28,27 @@
             "description": "Create HTML of the current file.",
             "tooltip": "Create HTML of the current file."
         },
+        // {
+        //     "label": "Bake",
+        //     "alignment": "right",
+        //     "task": "Bake",
+        //     "description": "Bake this project.",
+        //     "tooltip": "Bake this project."
+        // },
         {
-            "label": "Bake",
+            "label": "ALL",
             "alignment": "right",
-            "task": "Bake",
-            "description": "Bake this project.",
-            "tooltip": "Bake this project."
+            "task": "All",
+            "description": "Build and publish this project.",
+            "tooltip": "Build and publish."
         },
-        {
-            "label": "Serve",
-            "alignment": "right",
-            "task": "Serve",
-            "description": "Serve this project.",
-            "tooltip": "Serve this project."
-        },
+        // {
+        //     "label": "Serve",
+        //     "alignment": "right",
+        //     "task": "Serve",
+        //     "description": "Serve this project.",
+        //     "tooltip": "Serve this project."
+        // },
         {
             "label": "Extra",
             "alignment": "right",
@@ -59,8 +66,15 @@
                     "problemMatcher": [],
                 },
                 {
+                    "label": "Bake",
+                    "alignment": "right",
+                    "task": "Bake",
+                    "description": "Bake this project (make .html files).",
+                    "tooltip": "Bake this project."
+                }
+                {
                     "task": "Bake standard",
-                    "label": "Bake  standard PDFs (with answers)",
+                    "label": "Bake standard PDFs (with answers)",
                     "description": "Make  full PDF's. ('standaard')",
                     "problemMatcher": [],
                 },
@@ -70,6 +84,14 @@
                     "description": "Make handout PDF's.",
                     "problemMatcher": [],
                 },                
+                {
+                    "label": "Serve",
+                    "alignment": "right",
+                    "task": "Serve",
+                    "description": "Serve this project (doe salso 'frost').",
+                    "tooltip": "Serve this project."
+                },
+
                 {
                     "task": "Delete standard",
                     "label": "Delete all standard PDFs",
