use new ximeraserver also in devcontainer

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -12,9 +12,9 @@ services:
     #   - "3000:3000"  # Expose app's port (your Node.js app port)
     network_mode: service:ximeraserver
   ximeraserver:
-    image: registry.gitlab.kuleuven.be/wet/ximera/ximeradocker:2.3.7j    # Using a specific Nginx image
+    image: registry.gitlab.kuleuven.be/wet/ximera/ximeradocker:2.3_a
     ports:
-      - "2080:2000"          # Expose Nginx on port 8080
+      - "2080:2000"          # Expose Ximera on port 2080
     # volumes:
     #   - ./nginx:/etc/nginx/conf.d  # Nginx configuration files or static files
     networks:
