--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,12 +4,21 @@
     "dockerComposeFile": ["docker-compose.yml"],
     "service": "app",
     "workspaceFolder": "/code",
-    "forwardPorts": [2080],  // Port to access the web server
-    // "remoteEnv": {
+    "forwardPorts": [2000],  // Port to access the web server
+    "portsAttributes": {
+        "2000": {
+           "label": "XimeraServer",
+           "onAutoForward": "openBrowserOnce"
+         }
+       },    
+    "otherPortsAttributes": {
+        "onAutoForward": "ignore",
+    },
+       // "remoteEnv": {
     //   "DEV_MODE": "true"
     // },
-    //"remoteUser": "vscode",
-    "postStartCommand": "echo 'Ximera DevContainer started!'",
+    // "remoteUser": "vscode",
+    // "postStartCommand": "echo 'Ximera DevContainer started!'",
     "customizations": {
         // Configure properties specific to VS Code.
         "vscode": {
