--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
     // for the documentation about the tasks.json format
     "version": "2.0.0",
     "type": "shell",
-    "command": "xmlatex",
+    "command": "xmlatex.test",
     "windows": {
         "command": ".\\scripts\\xmlatex.bat"
     },    
@@ -36,7 +36,7 @@
         {
             "label": "All",
             "args": [
-                "all"
+                "-d", "all"
             ],
         },
         {
