--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,16 +4,23 @@
     "dockerComposeFile": ["docker-compose.yml"],
     "service": "app",
     "workspaceFolder": "/code",
-    "forwardPorts": [2000],  // Port to access the web server
-    "portsAttributes": {
-        "2000": {
-           "label": "XimeraServer",
-           "onAutoForward": "openBrowserOnce"
-         }
-       },    
-    "otherPortsAttributes": {
-        "onAutoForward": "ignore",
-    },
+    "forwardPorts": [2080],  // Port to access the web server
+      "portsAttributes": {
+        "2080": {
+          "label": "Web Server",
+          "onAutoForward": "notify",
+          "requireLocalPort": true
+        }
+      },    
+    // "portsAttributes": {
+    //     "2000": {
+    //        "label": "XimeraServer",
+    //        "onAutoForward": "openBrowserOnce"
+    //      }
+    //    },    
+    // "otherPortsAttributes": {
+    //     "onAutoForward": "ignore",
+    // },
        // "remoteEnv": {
     //   "DEV_MODE": "true"
     // },
