--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -91,7 +91,7 @@
           "id": "openSimpleBrowser",
           "type": "command",
           "command": "simpleBrowser.show",
-          "args": [ "http://localhost:2000/test" ],
+          "args": [ "http://localhost:2000/repositories" ],
 
         }
     ],
