Update xmlatex/.vscode/scripts (#17)
* update xmlatex.test  (from xake2024:medium_a)

* update tasks, implement 'xmlatex all'  (via xmlatex.test for now)

* use ximeradocker 2.3_b   (updated homepage, license

* use new ximeraserver also in devcontainer

* update devcontainer

* Use port 2080 (#16)

* xmlatex.test: use ENV variables for config/options

* obsolete URL_XIMERA and REPO_XIMERA inside .ximeraserve

* update README

---------

Co-authored-by: Wim Obbels <wim.obbels@kuleuven.be>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,11 +5,27 @@
     "service": "app",
     "workspaceFolder": "/code",
     "forwardPorts": [2080],  // Port to access the web server
-    // "remoteEnv": {
+      "portsAttributes": {
+        "2080": {
+          "label": "Web Server",
+          "onAutoForward": "notify",
+          "requireLocalPort": true
+        }
+      },    
+    // "portsAttributes": {
+    //     "2000": {
+    //        "label": "XimeraServer",
+    //        "onAutoForward": "openBrowserOnce"
+    //      }
+    //    },    
+    // "otherPortsAttributes": {
+    //     "onAutoForward": "ignore",
+    // },
+       // "remoteEnv": {
     //   "DEV_MODE": "true"
     // },
-    //"remoteUser": "vscode",
-    "postStartCommand": "echo 'Ximera DevContainer started!'",
+    // "remoteUser": "vscode",
+    // "postStartCommand": "echo 'Ximera DevContainer started!'",
     "customizations": {
         // Configure properties specific to VS Code.
         "vscode": {
