--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
     // for the documentation about the tasks.json format
     "version": "2.0.0",
     "type": "shell",
-    "command": "xmlatex",
+    "command": "xmlatex.test",
     "windows": {
         "command": ".\\scripts\\xmlatex.bat"
     },    
@@ -31,6 +31,12 @@
                 "--",
                 "--skip-mathjax",
                 "bake"
+            ],
+        },
+        {
+            "label": "All",
+            "args": [
+                "-d", "all"
             ],
         },
         {
@@ -85,7 +91,7 @@
           "id": "openSimpleBrowser",
           "type": "command",
           "command": "simpleBrowser.show",
-          "args": [ "http://localhost:2000/test" ],
+          "args": [ "http://localhost:2000/repositories" ],
 
         }
     ],
