--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -52,8 +52,14 @@
             ],
         },
         {
-                "label": "Preview in Simple Browser",
+                "label": "Preview NonCodespaces",
                 "command": "${input:openSimpleBrowser}",
+        },
+        {
+                "label": "Preview Codespaces",
+                "command": "${input:openCodespaceBrowser}",
+                // "args": ["${input:codespaceUrl}"],
+                // "command": "${command:simpleBrowser.show}",
         },
         {
             "label": "Bake standard",
@@ -85,6 +91,12 @@
                 "clean"
             ],
         },
+        {
+            "label": "Update DevEnv",
+            "args": [
+                "updateDevEnv"
+            ],
+        },
     ],
     "inputs": [
         {
@@ -93,11 +105,27 @@
           "command": "simpleBrowser.show",
           "args": [ "http://localhost:2000/repositories" ],
 
-        }
+        },
+        {
+          "id": "openCodespaceBrowser",
+          "type": "command",
+          "command": "simpleBrowser.show",
+          "args": [ "https://${env:CODESPACE_NAME}-2080.github.dev/repositories" ],
+
+        },
+        // {
+        //     "id": "codespaceUrl",
+        //     "type": "command",
+        //     "command": "workbench.action.terminal.runInTerminal",
+        //     "args": {
+        //       "script": "echo https://${CODESPACE_NAME}-2080.github.dev"
+        //     }
+        // }        
     ],
     "options": {
         "env": {
-          "PATH": "${env:PATH}:./xmScripts"  
+          "PATH": "${env:PATH}:./xmScripts",
+          "CODESPACE_NAME": "${env:CODESPACE_NAME}"  
         }
       },    
 }
