add 'Quick unit-test' menuitem (prototype, to be implemented properly

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,13 @@
                     "problemMatcher": [],
                 },
                 {
+                    "label": "TEST",
+                    "alignment": "right",
+                    "task": "TEST",
+                    "description": "Quick compile-and-serve for unittests",
+                    "tooltip": "Quick compile-and-serve for unittests"
+                },                
+                {
                     "label": "Bake",
                     "alignment": "right",
                     "task": "Bake",
