--- a/.ximera/ximera.cfg
+++ b/.ximera/ximera.cfg
@@ -74,12 +74,16 @@
 \HCode{<body>\Hnewline}%
 \Tg<div class="preamble">%
 \IfFileExists{\jobname.jax}{
+\IfFileExists{\jobname.mjax}{
+%% this .mjax file will presumable be added by luaxake
+}{
 \Tg<script type="math/tex">%
 \BVerbatimInput{\jobname.jax}%
 \Tg</script>%
-}
-{\Hnewline\HCode{<!-- mm, no \newcommands provided -->}\Hnewline}
+}}
+{\Hnewline\HCode{<!--Mmm, no newcommands provided -->}\Hnewline}
 
+%% Include .ids file
 \IfFileExists{\jobname.ids}{\HCode{<script type="text/javascript">\Hnewline}%
 \BVerbatimInput{\jobname.ids}%
 \HCode{</script>\Hnewline}%
